--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   input_quantity: ^2.3.2
   http: ^1.2.1
   shared_preferences: ^2.2.3
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
